syntax = "proto3";

option go_package="github.com/az58740/gRPC-JS-TypeScript/grpc-proto-loader/chat";


package chat;


service ChatService {
    rpc JoinChannel(Channel) returns (stream Message) {};
    rpc SendMessage(stream Message) returns (MessageAck) {};
    rpc Chat(stream ChatRequest) returns (stream ChatResponse){};
}

message Channel {
    string name = 1;
    string senders_name = 2;
}
message User {
  string id = 1;
  string name = 2;
}

message Message {
    string sender = 1;
    Channel channel = 2;
    string message = 3;
}

message MessageAck {
    string status = 1;
}
message ChatRequest{
    string message=1;
}
message ChatResponse{
    string username=1;
    string message=2;
}